--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -104,6 +104,7 @@ jobs:
 
   push_to_mirror:
     needs: run_tests
+    runs-on: ubuntu-latest
     if: |
       github.event_name == 'push' &&
       needs.check_conditions.outputs.should_run == 'true'
