--- a/.github/workflows/petit_pain.yml
+++ b/.github/workflows/petit_pain.yml
@@ -21,62 +21,40 @@ jobs:
       - name: Check repository conditions
         id: check
         run: |
-          # Vérifie si on est dans le dépôt miroir ou une branche ignorée
           if [[ "$GITHUB_REPOSITORY" == "${MIRROR_URL#*:}" || "$GITHUB_REF" == refs/heads/ga-ignore* ]]; then
-            echo "::set-output name=should_run::false"
+            echo "should_run=false" >> $GITHUB_OUTPUT
             echo "::notice::Skipping workflow: mirror repository or ga-ignore branch"
           else
-            echo "::set-output name=should_run::true"
+            echo "should_run=true" >> $GITHUB_OUTPUT
           fi
 
   check_coding_style:
-    name: Checking coding style
+    needs: check_conditions
+    if: needs.check_conditions.outputs.should_run == 'true'
     runs-on: ubuntu-latest
     container: ghcr.io/epitech/coding-style-checker:latest
-    outputs:
-        run_jobs: ${{steps.set_output.outputs.run_jobs}}
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{github.head_ref}}
-          fetch-depth: 1
+      - name: Checkout code
+        uses: actions/checkout@v3
         
-      - name: run coding style
-        run: $(check.sh $(pwd) $(pwd))
-
-      - name: check coding style error
-        id: set_output
+      - name: Run coding style check
+        run: check.sh $(pwd) $(pwd)
+        
+      - name: Display errors
         run: |
-          if [ -s $(pwd)/coding-style-reports.log ]; then
-            echo "run_jobs=false" >> $GITHUB_OUTPUT
-            while IFS=':' read -r FILE LINE GRAVITY ERROR; do
-              echo "::error file=$FILE,line=$LINE,title=$GRAVITY::$ERROR"
-            done < $(pwd)/coding-style-reports.log
-          else
-            echo "run_jobs=true" >> $GITHUB_OUTPUT
-          fi
-
-  check_conditions:
-    runs-on: ubuntu-latest
-    outputs:
-      should_run: ${{ steps.check.outputs.should_run }}
-    steps:
-      - name: Check execution conditions
-        id: check
-        run: |
-          # Vérifie si on doit skip le workflow
-          if [[ "$GITHUB_REPOSITORY" == "${MIRROR_URL#*:}" || "$GITHUB_REF" == refs/heads/ga-ignore* ]]; then
-            echo "should_run=false" >> $GITHUB_OUTPUT
-            echo "::notice::Skipping workflow (mirror repository or ga-ignore branch)"
-          else
-            echo "should_run=true" >> $GITHUB_OUTPUT
-            echo "::notice::Proceeding with workflow execution"
+          if [ -f coding-style-reports.log ]; then
+            while read -r line; do
+              file=$(echo "$line" | cut -d':' -f1)
+              line_num=$(echo "$line" | cut -d':' -f2)
+              message=$(echo "$line" | cut -d':' -f3-)
+              echo "::error file=$file,line=$line_num::$message"
+            done < coding-style-reports.log
+            exit 1
           fi
 
   check_program_compilation:
-    needs: [check_conditions, check_coding_style]  # Les deux dépendances
-    if: ${{ needs.check_conditions.outputs.should_run == 'true' && success() }}  # Vérifie aussi le succès des jobs précédents
+    needs: [check_conditions, check_coding_style]
+    if: needs.check_conditions.outputs.should_run == 'true'
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker
     steps:
@@ -128,18 +106,13 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'push' &&
-      needs.check_conditions.outputs.should_run == 'true'
-    env:
-      HAS_MIRROR_URL: ${{ secrets.MIRROR_URL != '' }}
+      needs.check_conditions.outputs.should_run == 'true' &&
+      secrets.MIRROR_URL != ''
     steps:
-      - name: Check mirror configuration
-        if: env.HAS_MIRROR_URL != 'true'
-        run: |
-          echo "::warning::MIRROR_URL secret is missing"
-          exit 0  # Skip job gracefully
-
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
       - name: Mirror repository
-        if: env.HAS_MIRROR_URL == 'true'
         uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url: ${{ secrets.MIRROR_URL }}
