--- a/.github/workflows/petit_pain.yml
+++ b/.github/workflows/petit_pain.yml
@@ -106,13 +106,18 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'push' &&
-      needs.check_conditions.outputs.should_run == 'true' &&
-      secrets.MIRROR_URL != ''
+      needs.check_conditions.outputs.should_run == 'true'
+    env:
+      HAS_MIRROR_URL: ${{ secrets.MIRROR_URL != '' }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        
+      - name: Check mirror configuration
+        if: env.HAS_MIRROR_URL != 'true'
+        run: |
+          echo "::warning::MIRROR_URL secret is missing"
+          exit 0  # Skip job gracefully
+
       - name: Mirror repository
+        if: env.HAS_MIRROR_URL == 'true'
         uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url: ${{ secrets.MIRROR_URL }}
