--- a/.github/workflows/petit_pain.yml
+++ b/.github/workflows/petit_pain.yml
@@ -59,48 +59,27 @@ jobs:
           fi
 
   check_program_compilation:
-    needs: [check_conditions, check_coding_style]
+    needs: check_coding_style
     if: needs.check_conditions.outputs.should_run == 'true'
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Compile project
+      - uses: actions/checkout@v4
+      - run: timeout 120 make
+      - run: make clean
+      - name: Check executables
+        shell: bash
         run: |
-          make re
-          echo "::group::Compilation output"
-          make
-          echo "::endgroup::"
-        timeout-minutes: 2
-      
-      - name: Verify executables
-        run: |
-          if [ -z "$EXECUTABLES" ]; then
-            # Si aucun exécutable n'est spécifié, on vérifie le binaire par défaut
-            if [ -f "choco" ]; then
-              echo "✓ Found default executable: choco"
-            else
-              echo "::warning::No default executable found"
+          IFS=',' read -ra EXECS <<< "$EXECUTABLES"
+          for e in "${EXECS[@]}"; do
+            if [ ! -x "$e" ]; then
+              echo "::error file=$e::Missing or non-executable file: $e"
+              exit 1
             fi
-          else
-            IFS=',' read -ra EXECS <<< "$EXECUTABLES"
-            for exec in "${EXECS[@]}"; do
-              if [ ! -f "$exec" ]; then
-                echo "::error file=$exec::Executable not found"
-                exit 1
-              fi
-              if [ ! -x "$exec" ]; then
-                echo "::error file=$exec::File is not executable"
-                exit 1
-              fi
-              echo "✓ Valid executable: $exec"
-            done
-          fi
-      
+            echo "Executable found: $e"
+          done
       - name: Clean build
-        run: make fclean
+        run: make clean
 
   run_tests:
     needs: check_program_compilation
