--- a/.github/workflows/petit_pain.yml
+++ b/.github/workflows/petit_pain.yml
@@ -9,9 +9,8 @@ on:
       - 'ga-ignore**'
 
 env:
-  MIRROR_URL: ${{ secrets.MIRROR_URL }}
-  EXECUTABLES: ${{ secrets.EXECUTABLES }}
-
+  MIRROR_URL: "git@github.com:arthurpierron/out_choco.git"
+  EXECUTABLES: "choco"
 jobs:
   check_conditions:
     runs-on: ubuntu-latest
