--- a/.github/workflows/petit_pain.yml
+++ b/.github/workflows/petit_pain.yml
@@ -100,17 +100,17 @@ jobs:
       github.event_name == 'push' &&
       needs.check_conditions.outputs.should_run == 'true'
     env:
-      HAS_MIRROR_URL: ${{ secrets.MIRROR_URL != '' }}
+      HAS_MIRROR_URL: ${{ MIRROR_URL != '' }}
     steps:
       - name: Check mirror configuration
         if: env.HAS_MIRROR_URL != 'true'
         run: |
-          echo "::warning::MIRROR_URL secret is missing"
+          echo "::warning::MIRROR_URL is missing"
           exit 0  # Skip job gracefully
 
       - name: Mirror repository
         if: env.HAS_MIRROR_URL == 'true'
         uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url: ${{ secrets.MIRROR_URL }}
+          target_repo_url: ${{ MIRROR_URL }}
           ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
