--- a/.github/workflows/petit_pain.yml
+++ b/.github/workflows/petit_pain.yml
@@ -110,5 +110,5 @@ jobs:
         if: env.HAS_MIRROR_URL == 'true'
         uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url: ${{ MIRROR_URL }}
+          target_repo_url: ${{ env.MIRROR_URL }}
           ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
