--- a/.github/workflows/petit_pain.yml
+++ b/.github/workflows/petit_pain.yml
@@ -94,21 +94,15 @@ jobs:
         timeout-minutes: 2
 
   push_to_mirror:
-    needs: run_tests
+    needs: run_criterion_tests
     runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'push' &&
-      needs.check_conditions.outputs.should_run == 'true'
     steps:
-      - name: Check mirror configuration
-        if: env.HAS_MIRROR_URL != 'true'
-        run: |
-          echo "::warning::MIRROR_URL is missing"
-          exit 0  # Skip job gracefully
-
-      - name: Mirror repository
-        if: env.HAS_MIRROR_URL == 'true'
-        uses: pixta-dev/repository-mirroring-action@v1
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          target_repo_url: ${{ env.MIRROR_URL }}
-          ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+            fetch-depth: 0
+            ref: ${{github.head_ref}}
+      - uses: pixta-dev/repository-mirroring-action@v1
+        with:
+            target_repo_url: ${{env.MIRROR_URL}}
+            ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
